[tool.poetry]
name = "java_toolkit"
version = "0.1.0"
description = ""
authors = ["Avi <avi@robusta.dev>"]
packages = [
    { include = "java_toolkit", from = "src" },
]

[tool.poetry.scripts]
java-toolkit = "java_toolkit.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
psutil = "5.9.8"
pydantic = "1.10.13"
typing-extensions = "4.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
